--- a/styles/globals.css
+++ b/styles/globals.css
@@ -102,7 +102,7 @@
 .baner {
   @apply w-full h-[60vh] flex items-center justify-center;
   background: linear-gradient(rgba(84, 140, 105, 0.5), rgba(84, 139, 104, 0.5)),
-    url(../pages/masab-imgs/banner.png) no-repeat bottom center / cover;
+    url(../public/images/banner.png) no-repeat bottom center / cover;
 }
 .baner h1 {
   @apply text-white font-bold text-[64px] inline tracking-[1px];
@@ -199,9 +199,9 @@ textarea {
   @apply w-[450px] border mt-4 px-2 py-4 rounded-lg border-solid border-[#999];
   outline: none;
 }
-form {
+/* form {
   @apply shadow-[5px_5px_0px_#548b68] p-12 rounded-[15px] border-2 border-solid border-[#548b68];
-}
+} */
 .fomrePage {
   @apply w-full flex h-screen;
 }
